[tool.poetry]
name = "oop"
version = "0.1.0"
description = ""
authors = ["Ilya Vasilenko <ilyavasilenko2000@gmail.com>"]
readme = "README.md"
exclude = ["*.bin"]  # если есть бинарные файлы

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"
isort = "6.0.1"
mypy = "1.17.1"
black = "25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
ignore_missing_imports = true